fix code review issues
Signed-off-by: emiliyank <e.kadiyski@gmail.com>